<resources>
    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="com.crashlytics.android.build_id">6f7a9905-c5f4-4ddf-a54e-31d7832a3bbe</string>
    <string name="channel_id">test_open</string>
    <string name="app_name">Marco_1ee</string>
    <string name="home_action_history">观看历史</string>
    <string name="home_action_search">搜索</string>
    <string name="exit_toast">再按一次退出网易公开课</string>
    <string name="main_recommend_xiaobian">小编推荐</string>
    <string name="main_recommend_shangke">赏课</string>
    <string name="main_recommend_yanjiang">演讲</string>
    <string name="main_recommend_ted">TED</string>
    <string name="main_recommend_for_you">猜你喜欢</string>
    <string name="main_recommend_more">更多>></string>
    <string name="main_recommend_for_you_login_hint">登录后猜得更精准哦！</string>
    <string name="main_recommend_for_you_login_btn">立即登录</string>
    <string name="main_recommend_no_data">数据获取失败，&lt;font color=#2f7e54>刷新&lt;/></string>
    <string name="main_recommend_no_data2">推荐内容获取失败，&lt;font color=#2f7e54>刷新&lt;/></string>
    <string name="main_refresh_succ">刷新成功</string>
    <string name="main_refresh_fail">刷新失败</string>
    <string name="all_tag">全部类型</string>
    <string name="all_source">全部来源</string>
    <string name="all_course_filter_tag">类型</string>
    <string name="all_course_filter_source">来源</string>
    <string name="all_course_filter_sort">排序</string>
    <string name="all_course_filter_sep">•</string>
    <string name="all_course_no_found">无相关课程内容</string>
    <string name="my_no_account">未登录网易通行证</string>
    <string name="my_account_summary">已绑定%1$d个帐号</string>
    <string name="my_account_manage">帐号管理</string>
    <string name="my_favorite_text">我的收藏</string>
    <string name="my_favorite_new">新</string>
    <string name="my_download_text">我的下载</string>
    <string name="my_record_text">播放记录</string>
    <string name="my_setting">设置</string>
    <string name="vdetail_title">详情</string>
    <string name="vdetail_2g3g_tip">你当前正使用2G/3G/4G网络</string>
    <string name="vdetail_all_translated">全部翻译完成</string>
    <string name="vdetail_no_translated">未翻译</string>
    <string name="vdetail_has_translated">已翻译</string>
    <string name="vdetail_all_updated">全部更新完成</string>
    <string name="vdetail_no_updated">未更新</string>
    <string name="vdetail_has_updated">已更新</string>
    <string name="vdetail_will_translate">即将开始翻译此课程</string>
    <string name="vdetail_del_store_success">已取消收藏</string>
    <string name="vdetail_add_store_success">成功添加至“我的收藏”</string>
    <string name="vdetail_collect_cancle_error">取消收藏失败！</string>
    <string name="vdetail_add_store_error">添加收藏失败！</string>
    <string name="vdetail_add_store_ing">正在同步数据…</string>
    <string name="vdetail_no_connection">无网络连接</string>
    <string name="vdetail_fail_to_load">点击屏幕，重新加载</string>
    <string name="vdetail_no_suchcourse">该内容不存在或已被删除</string>
    <string name="vdetail_course_not_init">尚未加载课程详情</string>
    <string name="vdetail_brief_type">类型:</string>
    <string name="vdetail_brief_school">学校:</string>
    <string name="vdetail_brief_teacher">讲师:</string>
    <string name="vdetail_brief_brief">简介:  </string>
    <string name="vdetail_no_courses">无相关课程内容</string>
    <string name="vdetail_tab_title_info">课程介绍</string>
    <string name="vdetail_tab_title_videos">课时</string>
    <string name="vdetail_tab_title_recommends">相关推荐</string>
    <string name="vdetail_tab_title_comments">跟贴</string>
    <string name="vdetail_tip_resume_download">下载继续</string>
    <string name="vdetail_tip_try_later">获取课程详情失败，请稍候再试</string>
    <string name="vdetail_tag_downloaded">已下</string>
    <string name="vdetail_tag_not_available">暂无</string>
    <string name="vdetail_video_not_available">未上传</string>
    <string name="vdetail_class_x">[第%1$d集]</string>
    <string name="vdetail_class_x2">第%1$d集</string>
    <string name="comment_button">跟贴</string>
    <string name="comment_latest">最新跟贴</string>
    <string name="comment_hot">热门跟贴</string>
    <string name="comment_const1">对</string>
    <string name="comment_const2">的跟贴</string>
    <string name="comment_copy">复制</string>
    <string name="comment_copy_success">复制成功</string>
    <string name="comment_reply">回复</string>
    <string name="comment_show_hidden">查看隐藏楼层</string>
    <string name="comment_show_hidden_fail">展开隐藏楼层失败</string>
    <string name="comment_showing_hidden">正在展开隐藏楼层...</string>
    <string name="comment_main_title">跟贴</string>
    <string name="comment_write_button">写跟贴</string>
    <string name="comment_submit_button">发表</string>
    <string name="comment_null">暂无更贴数据</string>
    <string name="commnet_close_or_not_exist">此跟贴已关闭或不存在</string>
    <string name="comment_open_fail">打开跟贴失败</string>
    <string name="comment_count_is_null">暂无跟贴</string>
    <string name="comment_get_more">查看下20条</string>
    <string name="comment_posting">正在发表...</string>
    <string name="comment_vote_fail">未能成功投票</string>
    <string name="comment_no_comment_info">此影片集没有跟贴</string>
    <string name="comment_length_toast">跟贴内容请在2-1000字内</string>
    <string name="commnet_null">还没有输入任何东西</string>
    <string name="comment_post_success">发贴成功，等待审核</string>
    <string name="comment_post_fail">发贴失败</string>
    <string name="comment_post_fail_reason">原因</string>
    <string name="comment_post_ing">正在发表跟贴</string>
    <string name="comment_no_more">加载超时或无更多内容</string>
    <string name="comment_up_floor">顶[%1$s]</string>
    <string name="comment_uped_floor">已顶[%1$s]</string>
    <string name="comment_length_hint">写跟贴(2-1000字符)</string>
    <string name="show_more">查看更多</string>
    <string name="date_diff_hour">%1$d小时前</string>
    <string name="date_diff_min">%1$d分钟前</string>
    <string name="date_diff_sec">1分钟前</string>
    <string name="str_comment_num">共%1$d人参与</string>
    <string name="str_net_error_or_invalid">网络异常或不稳定</string>
    <string name="foot_querying">正在载入更多数据...</string>
    <string name="comments_title">第%1$d集 跟贴 (%2$d)</string>
    <string name="player_loading">正在加载...</string>
    <string name="player_video_title">即将播放 第%1$d集 %2$s</string>
    <string name="player_subtitle">字幕</string>
    <string name="player_no_subtitle1">无字幕1</string>
    <string name="player_no_subtitle2">无字幕2</string>
    <string name="player_load_error">加载出错，请重新选择课时观看</string>
    <string name="player_load_file_not_found">该内容不存在或已被删除</string>
    <string name="player_replay">重播</string>
    <string name="player_guide">左右滑动手指可快进快退</string>
    <string name="player_subtitle_tips">本视频暂不支持字幕调整</string>
    <string name="error_feedback_title">纠错</string>
    <string name="error_feedback_description">问题描述：</string>
    <string name="error_feedback_spinner_hint">请选择</string>
    <string name="error_feedback_text_hint">请在此输入问题描述，我们将不断为您改进!</string>
    <string name="error_feedback_no_select_tips">请选择或者输入问题描述，谢谢！</string>
    <string name="error_feedback_course_name">课程名称：</string>
    <string name="error_feedback_video_index">第%1$d集</string>
    <string name="error_feedback_video_format">视频格式：</string>
    <string name="error_feedback_bug_desc">bug描述：</string>
    <string name="error_feedback_mobile_agent_value">课程纠错</string>
    <string name="error_feedback_btn">提  交</string>
    <string name="error_feedback_ing">正在提交反馈…</string>
    <string name="error_feedback_success">信息提交成功，谢谢！</string>
    <string name="error_feedback_failed">信息提交失败！</string>
    <string name="error_feedback_close">关闭</string>
    <string name="error_type_no_select">未选择</string>
    <string name="error_type_cannot_play">视频无法播放</string>
    <string name="error_type_blurred_screen">视频画面花屏</string>
    <string name="error_type_not_sync">视/音频不同步</string>
    <string name="error_type_not_fluency">播放不流畅</string>
    <string name="error_type_other">其他(请在输入框填写)</string>
    <string name="select_download_title">下载</string>
    <string name="select_download_error">未指定课程</string>
    <string name="select_download_btn">下载</string>
    <string name="select_download_translated">已翻译</string>
    <string name="select_download_untranslated">未翻译</string>
    <string name="select_download_updated">已更新</string>
    <string name="select_download_unupdated">未更新</string>
    <string name="select_download_space">已选&lt;font color=#f09214>%1$s&lt;/font>，可用空间%2$s</string>
    <string name="select_download_button_title">第%1$d集</string>
    <string name="select_download_close">关闭</string>
    <string name="select_download_tips">已添加至下载列表，你可在“我的下载”中查看</string>
    <string name="select_download_no_space">剩余的存储空间不足10M</string>
    <string name="setting_title">设置</string>
    <string name="setting_autopush">自动推送</string>
    <string name="setting_download_scan_title">扫描公开课视频</string>
    <string name="setting_download_scan_desc">如果变更了存储卡，通过扫描该存储卡可找回你已下载的公开课视频，扫描过程中请确保网络连接正常。</string>
    <string name="setting_download_scan_btn_text">扫描</string>
    <string name="downloading_empty_title">暂无下载中视频</string>
    <string name="downloading_empty_desc">"在wifi环境下，将视频下载到本地，
满足您离线收看需求，帮您省流量"</string>
    <string name="download_mgr_select_all">全选</string>
    <string name="download_mgr_delete">删除</string>
    <string name="download_mgr_start_all">全部开始</string>
    <string name="download_mgr_stop_all">全部暂停</string>
    <string name="loading">加载中…</string>
    <string name="action_favorite">收藏</string>
    <string name="action_download">下载</string>
    <string name="action_share">分享</string>
    <string name="action_feedback">纠错</string>
    <string name="select_download_path">选择课程下载的存放路径</string>
    <string name="all_font1">全部</string>
    <string name="all_font2">纪录片</string>
    <string name="all_font3">文学</string>
    <string name="all_font4">艺术</string>
    <string name="all_font5">哲学</string>
    <string name="all_font6">历史</string>
    <string name="all_font7">经济</string>
    <string name="all_font8">社会</string>
    <string name="all_font9">法律</string>
    <string name="all_font10">媒体</string>
    <string name="all_font11">伦理</string>
    <string name="all_font12">管理</string>
    <string name="all_font13">技能</string>
    <string name="all_font14">数学</string>
    <string name="all_font15">物理</string>
    <string name="all_font16">化学</string>
    <string name="all_font17">生物</string>
    <string name="all_font18">医学</string>
    <string name="all_font19">环境</string>
    <string name="all_font20">计算机</string>
    <string name="all_font21">来源</string>
    <string name="all_font22">国内</string>
    <string name="all_font23">国外</string>
    <string name="all_font24">特点</string>
</resources>