<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/comment_toolbar"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/comment_toolbar_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="16.0dip"
    android:paddingRight="16.0dip">

    <TextView
        android:id="@id/comment_toolbar_vote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8.0dip"
        android:layout_marginTop="8.0dip"
        android:text="@string/comment_up_floor"
        android:textAppearance="@style/comment_toolbar_style" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16.0dip"
        android:layout_marginRight="16.0dip"
        android:background="@drawable/comment_line" />

    <TextView
        android:id="@id/comment_toolbar_reply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8.0dip"
        android:layout_marginTop="8.0dip"
        android:text="@string/comment_reply"
        android:textAppearance="@style/comment_toolbar_style" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16.0dip"
        android:layout_marginRight="16.0dip"
        android:background="@drawable/comment_line" />

    <TextView
        android:id="@id/comment_toolbar_copy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8.0dip"
        android:layout_marginTop="8.0dip"
        android:text="@string/comment_copy"
        android:textAppearance="@style/comment_toolbar_style" />

</LinearLayout>
