<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/filter_board_fold"
    android:layout_width="fill_parent"
    android:layout_height="40.0dip"
    android:background="@drawable/filter_bg"
    android:baselineAligned="false"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingBottom="10.0dip"
    android:paddingTop="10.0dip">

    <TextView
        android:id="@id/filter_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="7.0dip"
        android:text="@string/all_tag"
        android:textAppearance="@style/filter_panel_item_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:text="@string/all_course_filter_sep"
        android:textSize="14.0sp" />

    <TextView
        android:id="@id/filter_source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7.0dip"
        android:layout_marginRight="7.0dip"
        android:text="@string/all_source"
        android:textAppearance="@style/filter_panel_item_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:text="@string/all_course_filter_sep"
        android:textSize="14.0sp" />

    <TextView
        android:id="@id/filter_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7.0dip"
        android:layout_marginRight="7.0dip"
        android:text="最新"
        android:textAppearance="@style/filter_panel_item_text" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ico_down_arrow" />
</LinearLayout>
