<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="8.0dip"
    android:paddingLeft="10.0dip"
    android:paddingRight="10.0dip"
    android:paddingTop="8.0dip">

    <TextView
        android:id="@id/select_download_path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4.0dip"
        android:layout_marginRight="4.0dip"
        android:text="@string/select_download_path"
        android:textColor="#ff333333"
        android:textSize="16.0sp" />

    <LinearLayout
        android:id="@id/download_path_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="9.0dip"
        android:orientation="vertical" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="1.0px"
        android:src="@drawable/list_view_divider" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20.0dip"
        android:text="@string/setting_download_scan_title"
        android:textColor="@color/text_black"
        android:textSize="16.0sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8.0dip"
        android:layout_marginRight="10.0dip"
        android:layout_marginTop="5.0dip"
        android:text="@string/setting_download_scan_desc"
        android:textColor="@color/text_gray"
        android:textSize="14.0sp" />

    <LinearLayout
        android:id="@id/scan_btn_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/search_history_clear_btn_bg"
        android:gravity="center"
        android:orientation="horizontal">

        <ProgressBar
            android:id="@id/scan_progress_bar"
            style="@android:style/Widget.ProgressBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10.0dip"
            android:visibility="gone" />

        <TextView
            android:id="@id/scan_btn_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/setting_download_scan_btn_text"
            android:textSize="16.0sp" />
    </LinearLayout>

    <TextView
        android:id="@id/scan_result_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="扫描结果"
        android:textColor="@color/text_black"
        android:textSize="16.0sp"
        android:visibility="gone" />
</LinearLayout>
